trying to do a flexbox

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <section>
 
 	<header>	
-		<h1>company name</h1>
+		<h1>COMPANY NAME</h1>
 	</header>
 
 		<ul id = "nav">
@@ -30,26 +30,26 @@
 	
 		<h2 class= "games">we are entertainment</h2>			
 	<figure>
-		<img src = "img/product3.jpg" alt = "mario and luigi">		
+		<img src = "img/product3.jpg" title ="mario and luigi" alt = "mario and luigi">		
 	</figure>
 	
 		<h2 class= "games">mobile games</h2>
 	<figure>
-		<img src = "img/product8.jpg" alt = "mobile phone">
+		<img src = "img/product8.jpg" title ="mobile phone" alt = "mobile phone">
 	</figure>
 	
 		<h2 class="games">board games</h2>
 	<figure>
-		<img src = "img/product6.jpg" alt = "chess pieces">
+		<img src = "img/product6.jpg" title ="chess pieces" alt = "chess pieces">
 	</figure>
 	
 		<h2 class="games">console games</h2>
 	<figure>
-		<img src = "img/product9.jpg" alt = "ps4 controller">
+		<img src = "img/product9.jpg" title ="ps4 controller" alt = "ps4 controller">
 	</figure>
 
 	<footer>
-		&copy; 2018 - Student name - Inholland 
+		&copy; 2018 - Mohaymen - Inholland 
 	</footer>
 
 
