--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
 <body>
 <section>
 	<header>	
-		<h1>company name</h1>
+		<h1>COMPANY NAME</h1>
 	</header>
 	
 		<ul id = "nav">
@@ -28,26 +28,47 @@
 		
 		<h2 class= "games">product catalog</h2>	
 		
-		<p class="picgrid">			
-			<p><img src="img/product1.jpg" alt="rubiks cube"></p>
-			<p><img src="img/product4.jpg" alt="poker"></p>
-			<p><img src="img/product7.jpg" alt="darts"></p>
-			<p><img src="img/product10.jpg" alt="nintendo"></p>			
-			<p><img src="img/product2.jpg" alt="toy houses"></p>
-			<p><img src="img/product5.jpg" alt="chess pieces"></p>
-			<p><img src="img/product8.jpg" alt="mobile phone"></p>
-			<p><img src="img/product11.jpg" alt="arcade"></p>			
-			<p><img src="img/product3.jpg" alt="mario and luigi"></p>
-			<p><img src="img/product6.jpg" alt="pieces"></p>
-			<p><img src="img/product9.jpg" alt="console controller"></p>
-			<p><img src="img/product12.jpg" alt="beer pong"></p>
+		
+		<span class="row">
+			<span class="column">
+				<img src="img/product1.jpg">
+			</span>
+			<span class="column">
+				<img src="img/product2.jpg">
+			</span>
+			<span class="column">
+				<img src="img/product3.jpg">
+			</span>
+			<span class="column">
+				<img src="img/product4.jpg">
+			</span>
+			<span class="column">
+				<img src="img/product5.jpg">
+			</span>
+			<span class="column">
+				<img src="img/product6.jpg">
+			</span>
+			<span class="column">
+				<img src="img/product7.jpg">
+			</span>
+			<span class="column">
+				<img src="img/product8.jpg">
+			</span>
+			<span class="column">
+				<img src="img/product9.jpg">
+			</span>
+			<span class="column">
+				<img src="img/product10.jpg">
+			</span>
+			<span class="column">
+				<img src="img/product11.jpg">
+			</span>
+			<span class="column">
+				<img src="img/product12.jpg">
+			</span>
 			
-		</p>
-
-
-	<footer>
-	2018 - Student name - Inholland	
-	</footer>  
+			
+	
 </section>
 </body>
 </html>
