contact page changes

--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
 	</header>
 	
 		<ul id = "nav">
-			<li><a href="#product">Home</a></li>
-			<li><a href="#contact">Product</a></li>
-			<li><a href="#blog">Blog</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="product.html">Product</a></li>
+			<li><a href="http://www.blogger.com">Blog</a></li>
 		</ul>
 		<h2 class="games">Contact</h2>
 
@@ -32,7 +32,9 @@
 
 	<form action="nowhere.php" method="post">
 		<fieldset>
-			<label >Select topic</label>
+			<span class="fir">
+			<label>Select topic</label>
+			</span>
 		<select>
 			<option value="general">General inquiries</option>
 			<option value="press">Press relations</option>
@@ -41,25 +43,25 @@
 		</fieldset>
 	
 		<fieldset class="contactFormFieldset">
-			<input	type="text"	name="contactFormName" placeholder="Your name.."/>
-		
+			<input	type="text"	name="contactFormName" placeholder="Your name.."/>		
 		</fieldset>
+		
 		<fieldset class="contactFormFieldset">
 			<input type="email"	name="email" placeholder="Your email.."/>
 		</fieldset>	
 	
-		<fieldset>
-	
-			<textarea rows="7"	cols="40" name="message" placeholder="Write something..">
-			</textarea>
-		
+		<fieldset>	
+			<textarea rows="7"	cols="40" name="message" placeholder="Write something.."></textarea>		
 		</fieldset>
-			<input type="submit	value="Submit"/>
+		
+			<span class="butt">
+			<input type="submit"	value="Submit"/>
+			</span>
 		
 	</form>
 	
 	<footer>
-		2018 - Student name - Inholland 
+		2018 - Mohaymen - Inholland 
 	</footer>
 </section
 </body>
