--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 	</header>
 
 		<ul id = "nav">
-			<li><a href="#product">products</a></li>
-			<li><a href="#contact">contact</a></li>
-			<li><a href="#blog">blog</a></li>
+			<li><a href="product.html">products</a></li>
+			<li><a href="contact.html">contact</a></li>
+			<li><a href="http://www.blogger.com">blog</a></li>
 		</ul>
 	
 		<h2 class= "games">we are entertainment</h2>			
