--- a/product.html
+++ b/product.html
@@ -21,15 +21,15 @@
 	</header>
 	
 		<ul id = "nav">
-			<li><a href="#product">Home</a></li>
-			<li><a href="#contact">Blog</a></li>
-			<li><a href="#blog">Contact</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="http://www.blogger.com">Blog</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 		
 		<h2 class= "games">product catalog</h2>	
 		
 		
-		<span class="row">
+		<!--<span class="row">
 			<span class="column">
 				<img src="img/product1.jpg">
 			</span>
@@ -65,6 +65,20 @@
 			</span>
 			<span class="column">
 				<img src="img/product12.jpg">
+			</span>-->
+			<span class="flex-container">
+			  <span><img src="img/product1.jpg"></span>
+			  <span><img src="img/product2.jpg"></span>
+			  <span><img src="img/product3.jpg"></span>  
+			  <span><img src="img/product4.jpg"></span>
+			  <div>5</div>
+			  <div>6</div>  
+			  <div>7</div>
+			  <div>8</div>
+			  <div>9</div>  
+			  <div>10</div>
+			  <div>11</div>
+			  <div>12</div>  
 			</span>
 			
 			
