--- a/contact.html
+++ b/contact.html
@@ -55,13 +55,13 @@
 		</fieldset>
 		
 			<span class="butt">
-			<input type="submit"	value="Submit"/>
+			<input type="submit" class="butt" value="Submit"/>
 			</span>
 		
 	</form>
 	
 	<footer>
-		2018 - Mohaymen - Inholland 
+		&copy;2018 - Mohaymen - Inholland 
 	</footer>
 </section
 </body>
