--- a/product.html
+++ b/product.html
@@ -27,60 +27,25 @@
 		</ul>
 		
 		<h2 class= "games">product catalog</h2>	
-		
-		
-		<!--<span class="row">
-			<span class="column">
-				<img src="img/product1.jpg">
-			</span>
-			<span class="column">
-				<img src="img/product2.jpg">
-			</span>
-			<span class="column">
-				<img src="img/product3.jpg">
-			</span>
-			<span class="column">
-				<img src="img/product4.jpg">
-			</span>
-			<span class="column">
-				<img src="img/product5.jpg">
-			</span>
-			<span class="column">
-				<img src="img/product6.jpg">
-			</span>
-			<span class="column">
-				<img src="img/product7.jpg">
-			</span>
-			<span class="column">
-				<img src="img/product8.jpg">
-			</span>
-			<span class="column">
-				<img src="img/product9.jpg">
-			</span>
-			<span class="column">
-				<img src="img/product10.jpg">
-			</span>
-			<span class="column">
-				<img src="img/product11.jpg">
-			</span>
-			<span class="column">
-				<img src="img/product12.jpg">
-			</span>-->
+				
 			<span class="flex-container">
-			  <span><img src="img/product1.jpg"></span>
-			  <span><img src="img/product2.jpg"></span>
-			  <span><img src="img/product3.jpg"></span>  
-			  <span><img src="img/product4.jpg"></span>
-			  <div>5</div>
-			  <div>6</div>  
-			  <div>7</div>
-			  <div>8</div>
-			  <div>9</div>  
-			  <div>10</div>
-			  <div>11</div>
-			  <div>12</div>  
+			  <span><img src="img/product1.jpg" class="flex-container"></span>
+			  <span><img src="img/product2.jpg" class="flex-container"></span>
+			  <span><img src="img/product3.jpg" class="flex-container"></span>  
+			  <span><img src="img/product4.jpg" class="flex-container"></span>
+			  <span><img src="img/product5.jpg" class="flex-container"></span>
+			  <span><img src="img/product6.jpg" class="flex-container"></span>  
+			  <span><img src="img/product7.jpg" class="flex-container"></span>
+			  <span><img src="img/product8.jpg" class="flex-container"></span>
+			  <span><img src="img/product9.jpg" class="flex-container"></span>  
+			  <span><img src="img/product10.jpg" class="flex-container"></span>
+			  <span><img src="img/product11.jpg" class="flex-container"></span>
+			  <span><img src="img/product12.jpg" class="flex-container"></span>  
 			</span>
 			
+	<footer>
+		&copy;2018 - Mohaymen - Inholland 
+	</footer>
 			
 	
 </section>
