--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</header>
 
 		<ul id = "nav">
-			<li><a href="product.html">products</a></li>
+			<li><a href="product.html">product</a></li>
 			<li><a href="contact.html">contact</a></li>
 			<li><a href="http://www.blogger.com">blog</a></li>
 		</ul>
