added a video to background and other few minor changes

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <html lang = "en">
 
 <head>
-
+<title>Contact Page</title>
 
 	<meta charset = "UTF-8">
 	<meta name = "keywords" 	content = "Contact">
@@ -19,7 +19,11 @@
 	<header>	
 		<h1>COMPANY NAME</h1>
 	</header>
-	
+		
+		<video autoplay muted loop id="backvid">
+			<source src="movie/background2.mp4" type="video/mp4">				
+		</video>
+
 		<ul id = "nav">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="product.html">Product</a></li>
@@ -63,6 +67,6 @@
 	<footer>
 		&copy;2018 - Mohaymen - Inholland 
 	</footer>
-</section
+</section>
 </body>
 </html>
