--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 <html lang = "en">
 
 <head>
-
+<title>Product Page</title>
 
 	<meta charset = "UTF-8">
 	<meta name = "keywords" 	content = "Products, games">
@@ -20,6 +20,10 @@
 		<h1>COMPANY NAME</h1>
 	</header>
 	
+		<video autoplay muted loop id="backvid">
+			<source src="movie/background2.mp4" type="video/mp4">				
+		</video>
+	
 		<ul id = "nav">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="http://www.blogger.com">Blog</a></li>
@@ -29,18 +33,18 @@
 		<h2 class= "games">product catalog</h2>	
 				
 			<span class="flex-container">
-			  <span><img src="img/product1.jpg" class="flex-container"></span>
-			  <span><img src="img/product2.jpg" class="flex-container"></span>
-			  <span><img src="img/product3.jpg" class="flex-container"></span>  
-			  <span><img src="img/product4.jpg" class="flex-container"></span>
-			  <span><img src="img/product5.jpg" class="flex-container"></span>
-			  <span><img src="img/product6.jpg" class="flex-container"></span>  
-			  <span><img src="img/product7.jpg" class="flex-container"></span>
-			  <span><img src="img/product8.jpg" class="flex-container"></span>
-			  <span><img src="img/product9.jpg" class="flex-container"></span>  
-			  <span><img src="img/product10.jpg" class="flex-container"></span>
-			  <span><img src="img/product11.jpg" class="flex-container"></span>
-			  <span><img src="img/product12.jpg" class="flex-container"></span>  
+				<span><img src="img/product1.jpg" class="flex-container"></span>
+				<span><img src="img/product2.jpg" class="flex-container"></span>
+				<span><img src="img/product3.jpg" class="flex-container"></span>  
+				<span><img src="img/product4.jpg" class="flex-container"></span>
+				<span><img src="img/product5.jpg" class="flex-container"></span>
+				<span><img src="img/product6.jpg" class="flex-container"></span>  
+				<span><img src="img/product7.jpg" class="flex-container"></span>
+				<span><img src="img/product8.jpg" class="flex-container"></span>
+				<span><img src="img/product9.jpg" class="flex-container"></span>  
+				<span><img src="img/product10.jpg" class="flex-container"></span>
+				<span><img src="img/product11.jpg" class="flex-container"></span>
+				<span><img src="img/product12.jpg" class="flex-container"></span>  
 			</span>
 			
 	<footer>
