--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang = "en">
 
 <head>
-
+<title>Homepage</title>
 
 	<meta charset = "UTF-8">
 	<meta name = "keywords" 	content = "Entertainment, mobile games, board games, console games">
@@ -21,9 +21,13 @@
 	<header>	
 		<h1>COMPANY NAME</h1>
 	</header>
+		
+		<video autoplay muted loop id="backvid">
+			<source src="movie/background2.mp4" type="video/mp4">				
+		</video>
 
 		<ul id = "nav">
-			<li><a href="product.html">product</a></li>
+			<li><a href="product.html">products</a></li>
 			<li><a href="contact.html">contact</a></li>
 			<li><a href="http://www.blogger.com">blog</a></li>
 		</ul>
