fallback fonts and minor changes to all pages

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 	</header>
 		
 		<video autoplay muted loop id="backvid">
-			<source src="movie/background2.mp4" type="video/mp4">				
+			<source src="movie/background3.mp4" type="video/mp4">				
 		</video>
 
 		<ul id = "nav">
@@ -58,9 +58,9 @@
 			<textarea rows="7"	cols="40" name="message" placeholder="Write something.."></textarea>		
 		</fieldset>
 		
-			<span class="butt">
-			<input type="submit" class="butt" value="Submit"/>
-			</span>
+			
+			<input id="butt" type="submit" class="butt" value="Submit"/>
+			
 		
 	</form>
 	
