--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</header>
 		
 		<video autoplay muted loop id="backvid">
-			<source src="movie/background2.mp4" type="video/mp4">				
+			<source src="movie/background3.mp4" type="video/mp4">				
 		</video>
 
 		<ul id = "nav">
@@ -34,22 +34,22 @@
 	
 		<h2 class= "games">we are entertainment</h2>			
 	<figure>
-		<img src = "img/product3.jpg" title ="mario and luigi" alt = "mario and luigi">		
+		<img src = "img/product3.jpg" title ="mario and luigi" alt = "mario characters">		
 	</figure>
 	
 		<h2 class= "games">mobile games</h2>
 	<figure>
-		<img src = "img/product8.jpg" title ="mobile phone" alt = "mobile phone">
+		<img src = "img/product8.jpg" title ="mobile phone" alt = "mobile game">
 	</figure>
 	
 		<h2 class="games">board games</h2>
 	<figure>
-		<img src = "img/product6.jpg" title ="chess pieces" alt = "chess pieces">
+		<img src = "img/product6.jpg" title ="chess pieces" alt = "boardgame">
 	</figure>
 	
 		<h2 class="games">console games</h2>
 	<figure>
-		<img src = "img/product9.jpg" title ="ps4 controller" alt = "ps4 controller">
+		<img src = "img/product9.jpg" title ="ps4 controller" alt = "console controller">
 	</figure>
 
 	<footer>
