--- a/product.html
+++ b/product.html
@@ -20,8 +20,10 @@
 		<h1>COMPANY NAME</h1>
 	</header>
 	
+		<link rel="icon" href="img/favicon.png" type="image/png" />
+		
 		<video autoplay muted loop id="backvid">
-			<source src="movie/background2.mp4" type="video/mp4">				
+			<source src="movie/background3.mp4" type="video/mp4">				
 		</video>
 	
 		<ul id = "nav">
@@ -33,18 +35,18 @@
 		<h2 class= "games">product catalog</h2>	
 				
 			<span class="flex-container">
-				<span><img src="img/product1.jpg" class="flex-container"></span>
-				<span><img src="img/product2.jpg" class="flex-container"></span>
-				<span><img src="img/product3.jpg" class="flex-container"></span>  
-				<span><img src="img/product4.jpg" class="flex-container"></span>
-				<span><img src="img/product5.jpg" class="flex-container"></span>
-				<span><img src="img/product6.jpg" class="flex-container"></span>  
-				<span><img src="img/product7.jpg" class="flex-container"></span>
-				<span><img src="img/product8.jpg" class="flex-container"></span>
-				<span><img src="img/product9.jpg" class="flex-container"></span>  
-				<span><img src="img/product10.jpg" class="flex-container"></span>
-				<span><img src="img/product11.jpg" class="flex-container"></span>
-				<span><img src="img/product12.jpg" class="flex-container"></span>  
+				<span><img src="img/product1.jpg" class="flex-container" title="rubiks cube" alt="game rubiks"></span>
+				<span><img src="img/product2.jpg" class="flex-container" title="toy house" alt="game house toy model"></span>
+				<span><img src="img/product3.jpg" class="flex-container" title="mario and luigi" alt="mario characters"></span>  
+				<span><img src="img/product4.jpg" class="flex-container" title="poker" alt="game of poker with cards"></span>
+				<span><img src="img/product5.jpg" class="flex-container" title="chess" alt="chess pieces"></span>
+				<span><img src="img/product6.jpg" class="flex-container" title="other chess" alt="4 pieces"></span>  
+				<span><img src="img/product7.jpg" class="flex-container" title="darts" alt="board and darts"></span>
+				<span><img src="img/product8.jpg" class="flex-container" title="mobile phone" alt="mobile game"></span>
+				<span><img src="img/product9.jpg" class="flex-container" title="ps4 controller" alt="console controller"></span>  
+				<span><img src="img/product10.jpg" class="flex-container" title="nintendo controller" alt="nintendo game controller"></span>
+				<span><img src="img/product11.jpg" class="flex-container" title="arcade" alt="aracde bowling"></span>
+				<span><img src="img/product12.jpg" class="flex-container" title="beer pong" alt="cups and beer"></span>  
 			</span>
 			
 	<footer>
